Simplified continuum build script. Only plos/it tests are run.
git-svn-id: http://svn.topazproject.org/svn/head@4048 48088309-b40f-0410-b149-b14953253675